{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 27,
  "lineage": "9f62469e-e479-c5ed-e7b0-756bf32e9d2d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "quiz-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/networkInterfaces/quiz-nic",
            "internal_domain_name_suffix": "eg0lsgz5tizexodg1fcdr5zc5b.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/publicIPAddresses/quiz-ip",
                "subnet_id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/virtualNetworks/quiz-network/subnets/quiz-subnet"
              }
            ],
            "location": "eastasia",
            "mac_address": "00-0D-3A-81-18-C4",
            "name": "quiz-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "quiz-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Compute/virtualMachines/quiz-vm"
          },
          "dependencies": [
            "azurerm_public_ip.quiz-ip",
            "azurerm_resource_group.quiz-rg",
            "azurerm_subnet.quiz-subnet",
            "azurerm_virtual_network.quiz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "quiz-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/networkSecurityGroups/quiz-sg",
            "location": "eastasia",
            "name": "quiz-sg",
            "resource_group_name": "quiz-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "quiz-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.quiz-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "quiz-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/networkSecurityGroups/quiz-sg/securityRules/quiz-dev-rule",
            "name": "quiz-dev-rule",
            "network_security_group_name": "quiz-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "quiz-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.quiz-sg",
            "azurerm_resource_group.quiz-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "quiz-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/publicIPAddresses/quiz-ip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "20.247.115.196",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "quiz-ip",
            "resource_group_name": "quiz-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.quiz-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "quiz-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/virtualNetworks/quiz-network/subnets/quiz-subnet",
            "name": "quiz-subnet",
            "resource_group_name": "quiz-resources",
            "virtual_network_name": "quiz-network"
          },
          "dependencies": [
            "azurerm_resource_group.quiz-rg",
            "azurerm_virtual_network.quiz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "quiz-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/virtualNetworks/quiz-network/subnets/quiz-subnet",
            "network_security_group_id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/networkSecurityGroups/quiz-sg",
            "subnet_id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/virtualNetworks/quiz-network/subnets/quiz-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.quiz-sg",
            "azurerm_resource_group.quiz-rg",
            "azurerm_subnet.quiz-subnet",
            "azurerm_virtual_network.quiz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "quiz-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1bb9b421-9a3f-4b32-b866-d94438ff22f9",
            "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/virtualNetworks/quiz-network",
            "location": "eastasia",
            "name": "quiz-network",
            "resource_group_name": "quiz-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/virtualNetworks/quiz-network/subnets/quiz-subnet",
                "name": "quiz-subnet",
                "security_group": "/subscriptions/8ce04bc6-9751-4f3f-910c-ff2bcecc5689/resourceGroups/quiz-resources/providers/Microsoft.Network/networkSecurityGroups/quiz-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.quiz-rg"
          ]
        }
      ]
    }
  ]
}